--- a/web-developer.html
+++ b/web-developer.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/umlaut/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=o6w1afwx&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nzCTmMwH'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
@@ -126,7 +126,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://nearearthautonomy.applytojob.com/apply/iH2ySRbAXO/Full-Stack-Web-Developer'>Full Stack Web Developer - Near Earth Autonomy - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nearearthautonomy.applytojob.com/apply/iH2ySRbAXO/Full-Stack-Web-Developer'>Full Stack Web Developer - Near Earth Autonomy - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -182,7 +182,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ongoing.join.com/jobs/461804-senior-web-developer-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): ??? Senior Web-Developer 80-1... | JOIN</a></h5> 
+<h5><a href='https://ongoing.join.com/jobs/461804-senior-web-developer-80-100-oder-nach-vereinbarung'>Job @ ongoing (Zug): ??? Senior Web-Developer 80-1... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -240,7 +240,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.php-resource.de/jobs/job,45536,Teamleiter-mwd-WebentwicklungWeb-Development.htm'>Teamleiter (m/w/d) Webentwicklung/Web Development Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
+<h5><a href='https://www.php-resource.de/jobs/job,45536,Teamleiter-mwd-WebentwicklungWeb-Development.htm'>Teamleiter (m/w/d) Webentwicklung/Web Development Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -409,7 +409,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.quipu.de/careers/web-developer-microsoft-net/'>Quipu | Web Developer Microsoft .NET</a></h5> 
+<h5><a href='https://www.quipu.de/careers/web-developer-microsoft-net/'>Quipu | Web Developer Microsoft .NET</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -421,7 +421,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/riseinteractive/jobs/1928201'>Job Application for Web Developer (Mexico City) at Rise Interactive</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/riseinteractive/jobs/1928201'>Job Application for Web Developer (Mexico City) at Rise Interactive</a></h5> 
 <p><span class="badge badge-light">Mexico Mexico Mexico City, Mexico  Mexico</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -429,7 +429,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/knakdigital/job/59kpg9zdm39316y9khb55jsx6h/frontenddev'>Front-End Web Developer | Knak Digital</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/knakdigital/job/59kpg9zdm39316y9khb55jsx6h/frontenddev'>Front-End Web Developer | Knak Digital</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -453,7 +453,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light">Los Angeles  Los Angeles</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hylinkgroup/4b5102ab-359b-4429-b70f-dc8e65aa090b'>Hylink Digital Solutions - Back-End Web Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/hylinkgroup/4b5102ab-359b-4429-b70f-dc8e65aa090b'>Hylink Digital Solutions - Back-End Web Developer</a></h5> 
 <p><span class="badge badge-light">New York  New York City</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
